# VisionAI

./: README.md
backend/: .gitignore  api.py  firecrawl.py  firecrawl_service.py  models.py  prompts.py  pyproject.toml  requirements.txt  workflow.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  translation.ts
frontend/src/components/: header.tsx  input.tsx  intro.tsx
frontend/src/components/languages/: da-translation.json  en-translation.json
